<resources>

    <!-- Приложение -->
    <string name="app_name">YP_Playlist_Maker</string>

    <!-- Экраны -->
    <string name="main_activity_header">Playlist maker</string>
    <string name="search_activity_header">Поиск</string>
    <string name="media_activity_header">Медиатека</string>
    <string name="settings_activity_header">Настройки</string>
    <string name="playlist_activity_header">Новый плейлист</string>

    <!-- Экран поиска -->
    <string name="search_activity_back">Назад</string>
    <string name="search_activity_clear">Очистить</string>
    <string name="point_divider">Точка разделитель</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="update">Обновить</string>

    <!-- Экран медиа -->
    <string name="media_activity_back">Назад</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали ни\nодного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>

    <!-- Экран настроек -->
    <string name="settings_activity_dark_mode">Темная тема</string>
    <string name="settings_activity_share">Поделиться приложением</string>
    <string name="settings_activity_contact_support">Написать в поддержку</string>
    <string name="settings_activity_licence_agreement">Пользовательское соглашение</string>
    <string name="settings_activity_back">Назад</string>

    <!-- Экран плеера -->
    <string name="duration_time">00:00</string>
    <string name="track_duration">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_year">Год</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="default_time">00:00</string>

    <!-- Экран плеера BottomSheet -->
    <string name="add_to_playlist">Добавить в плейлист</string>

    <!-- Экран создания плейлиста -->
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="button_create">Создать</string>
    <string name="cancel_dialog_title">Завершить создание плейлиста?</string>
    <string name="cancel_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel_dialog_neutral_button">Отмена</string>
    <string name="cancel_dialog_positive_button">Завершить</string>

    <!-- Экран плейлиста -->
    <string name="delete_dialog_title">Удалить трек</string>
    <string name="delete_dialog_message">Хотите удалить трек?</string>
    <string name="delete_dialog_negative_button">Нет</string>
    <string name="delete_dialog_positive_button">Да</string>
    <string name="share_error">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="delete_playlist_negative_button">Нет</string>
    <string name="delete_playlist_positive_button">Да</string>

    <!-- Экран плейлиста BottomSheetMenu -->
    <string name="menu_share">Поделиться</string>
    <string name="menu_edit_playlist">Редактировать информацию</string>
    <string name="menu_delete_playlist">Удалить плейлист</string>

    <!-- Ссылки -->
    <string name="license_agreement_link">https://yandex.ru/legal/practicum_offer</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/?from=catalog</string>

    <!-- Текст -->
    <string name="contact_support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="contact_support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="mailto">mailto:</string>
    <string name="my_email">AlexZh495@yandex.ru</string>
    <string name="share_with">Поделиться с помощью:</string>
    <string name="saved_text">Сохраненный текст</string>


</resources>