<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context="com.example.yp_playlist_maker.settings.ui.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolBar"
        app:title="@string/settings_activity_header" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        style="@style/SettingsMenuText"
        android:layout_marginTop="@dimen/margin_layout_24"
        android:text="@string/settings_activity_dark_mode"
        android:theme="@style/Switcher" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_share"
        style="@style/SettingsMenuText"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/settings_activity_share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_contact_support"
        style="@style/SettingsMenuText"
        android:drawableEnd="@drawable/ic_contact_support"
        android:text="@string/settings_activity_contact_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mtv_license_agreement"
        style="@style/SettingsMenuText"
        android:drawableEnd="@drawable/ic_forward"
        android:text="@string/settings_activity_licence_agreement" />

</LinearLayout>