<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menu_background"
    android:orientation="vertical"
    tools:context="com.example.yp_playlist_maker.main.ui.MainFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/MainToolBar"
        app:title="@string/main_activity_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/margin_layout_24"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:showDividers="middle">

        <Button
            android:id="@+id/btn_search"
            style="@style/MainScreenButton"
            android:text="@string/search_activity_header"
            app:icon="@drawable/ic_search" />

        <Button
            android:id="@+id/btn_media"
            style="@style/MainScreenButton"
            android:text="@string/media_activity_header"
            app:icon="@drawable/ic_media" />

        <Button
            android:id="@+id/btn_settings"
            style="@style/MainScreenButton"
            android:text="@string/settings_activity_header"
            app:icon="@drawable/ic_settings" />

    </LinearLayout>

</LinearLayout>