<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical"
    tools:context="com.example.yp_playlist_maker.search.ui.SearchFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/ToolBar"
        app:title="@string/search_activity_header" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/margin_base_16"
        android:layout_marginTop="@dimen/margin_base_8"
        android:background="@drawable/edit_text">

        <EditText
            android:id="@+id/et_search"
            style="@style/SearchBar"
            android:autofillHints="fa"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/ic_cursor"
            tools:ignore="LabelFor" />

        <ImageView
            android:id="@+id/iw_clear"
            style="@style/SearchMenuIcon"
            android:contentDescription="@string/search_activity_clear"
            android:src="@drawable/ic_clear" />

    </FrameLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:indeterminateTint="@color/yp_blue"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_search_history"
            style="@style/InfoMessage"
            android:text="@string/search_history" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_track"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_base_16"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_clear_history"
            style="@style/ReloadButton"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:text="@string/clear_history" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_102"
        android:layout_marginBottom="@dimen/margin_base_16"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_search_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:src="@drawable/image_placeholder" />

        <TextView
            android:id="@+id/placeholderMessage"
            style="@style/InfoMessage"
            android:text="@string/nothing_found" />

        <Button
            android:id="@+id/btn_reload"
            style="@style/ReloadButton"
            android:text="@string/update" />

    </LinearLayout>

</LinearLayout>