<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout style="@style/ToolBar">

        <ImageView
            style="@style/ToolBarIcon"
            android:contentDescription="@string/media_activity_back"
            android:src="@drawable/ic_back" />

        <TextView
            style="@style/ToolBarText"
            android:text="@string/search_activity_header" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text"
        android:layout_gravity="center_vertical">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:autofillHints=""
            android:hint="@string/search_activity_header"
            android:fontFamily="@font/ys_display_regular"
            android:inputType="text"
            android:textSize="@dimen/font_size_list_16"
            android:drawableStart="@drawable/ic_search_small"
            android:drawablePadding="4dp"
            android:layout_marginStart="12dp"
            android:textColor="@color/yp_gray"
            android:background="@color/gray" />

        <ImageView
            style="@style/SettingsMenuIcon"
            android:contentDescription="@string/settings_activity_licence_agreement"
            android:src="@drawable/ic_clear" />

    </FrameLayout>

</LinearLayout>