<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/audioplayer_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context="com.example.yp_playlist_maker.player.ui.AudioPlayerFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_border_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_border_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_border_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_border_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/left_border_16"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_back" />

            <ImageView
                android:id="@+id/track_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="42dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/right_border_24"
                app:layout_constraintStart_toEndOf="@id/left_border_24"
                app:layout_constraintTop_toBottomOf="@id/toolbar"
                tools:src="@drawable/img_placeholder_audio_player" />

            <TextView
                android:id="@+id/track_name"
                style="@style/TrackMainInformation"
                android:layout_marginTop="24dp"
                android:textSize="22sp"
                app:layout_constraintEnd_toStartOf="@id/right_border_24"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/left_border_24"
                app:layout_constraintTop_toBottomOf="@id/track_image"
                tools:text="Название песни" />

            <TextView
                android:id="@+id/artist_name"
                style="@style/TrackMainInformation"
                android:layout_marginTop="12dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/right_border_24"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/left_border_24"
                app:layout_constraintTop_toBottomOf="@id/track_name"
                tools:text="Название исполнителя" />

            <ImageView
                android:id="@+id/add_to_playlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                android:src="@drawable/btn_add_to_playlist"
                app:layout_constraintStart_toEndOf="@id/left_border_24"
                app:layout_constraintTop_toBottomOf="@id/artist_name" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_play"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="@id/add_to_playlist"
                app:layout_constraintEnd_toStartOf="@id/like"
                app:layout_constraintStart_toEndOf="@id/add_to_playlist"
                app:layout_constraintTop_toTopOf="@id/add_to_playlist" />

            <ImageView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="54dp"
                app:layout_constraintEnd_toStartOf="@id/right_border_24"
                app:layout_constraintTop_toBottomOf="@id/artist_name"
                tools:src="@drawable/btn_like_non_active" />

            <TextView
                android:id="@+id/play_time"
                style="@style/TrackMainInformation"
                android:layout_marginTop="4dp"
                android:text="@string/duration_time"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@id/right_border_16"
                app:layout_constraintStart_toEndOf="@id/left_border_16"
                app:layout_constraintTop_toBottomOf="@id/play" />

            <TextView
                android:id="@+id/duration_text"
                style="@style/TrackOtherInformation"
                android:layout_marginTop="30dp"
                android:text="@string/track_duration"
                app:layout_constraintStart_toEndOf="@id/left_border_16"
                app:layout_constraintTop_toBottomOf="@id/play_time" />

            <TextView
                android:id="@+id/duration_value"
                style="@style/TrackOtherInformation"
                android:layout_marginTop="30dp"
                android:textColor="@color/track_value_color"
                app:layout_constraintEnd_toStartOf="@id/right_border_16"
                app:layout_constraintTop_toBottomOf="@id/play_time"
                tools:text="Длительность" />

            <TextView
                android:id="@+id/album_text"
                style="@style/TrackOtherInformation"
                android:text="@string/track_album"
                app:layout_constraintStart_toEndOf="@id/left_border_16"
                app:layout_constraintTop_toBottomOf="@id/duration_text" />

            <TextView
                android:id="@+id/album_value"
                style="@style/TrackOtherInformation"
                android:layout_marginStart="10dp"
                android:textColor="@color/track_value_color"
                app:layout_constraintEnd_toStartOf="@id/right_border_16"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/duration_text"
                app:layout_constraintTop_toBottomOf="@id/duration_value"
                tools:text="Альбом" />

            <TextView
                android:id="@+id/year_text"
                style="@style/TrackOtherInformation"
                android:text="@string/track_year"
                app:layout_constraintStart_toEndOf="@id/left_border_16"
                app:layout_constraintTop_toBottomOf="@id/album_text" />

            <TextView
                android:id="@+id/year_value"
                style="@style/TrackOtherInformation"
                android:textColor="@color/track_value_color"
                app:layout_constraintEnd_toStartOf="@id/right_border_16"
                app:layout_constraintTop_toBottomOf="@id/album_value"
                tools:text="Год" />

            <TextView
                android:id="@+id/genre_text"
                style="@style/TrackOtherInformation"
                android:text="@string/track_genre"
                app:layout_constraintStart_toEndOf="@id/left_border_16"
                app:layout_constraintTop_toBottomOf="@id/year_text" />

            <TextView
                android:id="@+id/genre_value"
                style="@style/TrackOtherInformation"
                android:textColor="@color/track_value_color"
                app:layout_constraintEnd_toStartOf="@id/right_border_16"
                app:layout_constraintTop_toBottomOf="@id/year_value"
                tools:text="Жанр" />

            <TextView
                android:id="@+id/country_text"
                style="@style/TrackOtherInformation"
                android:text="@string/track_country"
                app:layout_constraintStart_toEndOf="@id/left_border_16"
                app:layout_constraintTop_toBottomOf="@id/genre_text" />

            <TextView
                android:id="@+id/country_value"
                style="@style/TrackOtherInformation"
                android:textColor="@color/track_value_color"
                app:layout_constraintEnd_toStartOf="@id/right_border_16"
                app:layout_constraintTop_toBottomOf="@id/genre_value"
                tools:text="Страна" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        style="@style/BottomSheet">

        <View style="@style/BottomSheetLineView" />

        <TextView style="@style/BottomSheetTitle" />

        <Button
            android:id="@+id/btn_bottom_sheet"
            style="@style/PlaylistCreateButton"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>